# crf-old

./: crf.cabal
Data/: CRF.hs  RCRF.hs  RCRF2.hs
Data/CRF/: Base.hs  Codec.hs  Const.hs  FeatSel.hs  Feature.hs  Gradient.hs  InOut.hs  LogMath.hs  Model.hs  R.hs  Types.hs  Util.hs  Word.hs  X.hs  XRYs.hs  XY.hs  Y.hs
Data/CRF/CRF/: Gradient.hs  Infere.hs  Model.hs
Data/CRF/Codec/: X.hs  XY.hs
Data/CRF/Control/: DynamicProgramming.hs
Data/CRF/FeatSel/: Hidden.hs  Present.hs
Data/CRF/Internal/: X.hs  XR.hs  XRY.hs  XY.hs
Data/CRF/Model/: Conns.hs  Internal.hs
Data/CRF/RCRF/: Feature.hs  Gradient.hs  Infere.hs  Model.hs
Data/CRF/RCRF2/: Gradient.hs  Infere.hs  Intersect.hs  Model.hs
Data/CRF/Vector/: Binary.hs
