Name:               crf
Version:            0.0.0
Synopsis:           Conditional random fields library.
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple
Exposed-modules:    Data.CRF
Other-modules:      Data.CRF.Model
                    Data.CRF.Model.Internal
                    Data.CRF.Codec
                    Data.CRF.Base
                    Data.CRF.Feature
                    Data.CRF.FeatSel
                    Data.CRF.Gradient
                    Data.CRF.LogMath
                    Data.CRF.Util
                    Data.CRF.Vector.Binary
                    Data.CRF.Control.DynamicProgramming
Build-Depends:      base
                  , primitive
                  , containers
                  , vector
                  , array
                  , ListLike
                  , listlike-instances
                  , random
		  , parallel
                  , binary
                  , data-memocombinators
                  , text
                  , sgd == 0.0.0
