Name:               crf
Version:            0.0.1.2
Synopsis:           Conditional random fields library.
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple
Exposed-modules:    Data.CRF
		    Data.RCRF
		    Data.CRF.Base
		    Data.CRF.Word
		    Data.CRF.X
		    Data.CRF.R
		    Data.CRF.Y
                    Data.CRF.Codec
		    Data.CRF.Feature
		    Data.CRF.FeatSel.Present
		    Data.CRF.FeatSel.Hidden
		    Data.CRF.CRF.Model
		    Data.CRF.CRF.Infere
		    Data.CRF.RCRF.Model
		    Data.CRF.RCRF.Infere
Other-modules:      Data.CRF.CRF.Gradient
                    Data.CRF.RCRF.Gradient
                    Data.CRF.LogMath
                    Data.CRF.Util
                    Data.CRF.Control.DynamicProgramming
Build-Depends:      base
                  , containers
                  , vector
                  , array
                  , random
		  , parallel
                  , binary
                  , vector-binary
                  , sgd == 0.0.*
